# context-forge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: context-forge.md  settings.json
.claude/commands/: context-forge.add-role-knowledge.md  context-forge.migrate.md
.claude/plugins/.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
specs/001-context-forge-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-context-forge-cli/checklists/: requirements.md
specs/001-improve-subagent-quality/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-improve-subagent-quality/checklists/: requirements.md
specs/001-improve-subagent-quality/contracts/: quality-contract.md
specs/001-role-knowledge-plugin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-scenarios.md
specs/001-role-knowledge-plugin/checklists/: requirements.md
specs/001-role-knowledge-plugin/contracts/: cli-interface.md  command-interface.md
specs/001-role-plugin-migrate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-role-plugin-migrate/checklists/: requirements.md
specs/002-github-actions-ci/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-skill-subagent-activation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/context_forge_cli/: __init__.py
tests/integration/: test_cli.py
tests/unit/: __init__.py  test_claude_md_helpers.py  test_context_forge_md_helpers.py
(+11 files in other folders)
